{
    "version": 1,
    "name": "GameControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6cb81fe1-092a-44b9-8279-7fa5286e467c",
            "actions": [
                {
                    "name": "OpenColorWheel",
                    "type": "Button",
                    "id": "f2860e2d-66ae-48d9-be1a-c897793883d8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "01432fa6-b30c-4d9e-9011-d411b0957411",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ResetColor",
                    "type": "Button",
                    "id": "982e16e3-0560-4ca1-a7e7-4489ecb5ee17",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9f9a5a4b-6dde-4953-8e86-ad7b772cc02c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenColorWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11cd293e-2181-4015-85af-f8d35a687329",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76d2c9fb-d591-4e56-bf18-380d3fb5f581",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bc69aa3-5ff5-4905-ba28-38bcba1fcc48",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02fb4598-a3a2-42a8-9671-f04d56db4013",
                    "path": "<Mouse>/leftButton",
                    "interactions": "MultiTap(tapDelay=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "ResetColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}